<resources>
    <string name="app_name" translatable="false">TapTalk</string>

    <!--Share Options-->
    <string name="add_message_dots">Add message…</string>
    <string name="select_chat">Select Chat</string>
    <string name="df_recipients">%d Recipients</string>
    <string name="one_recipient">1 Recipient</string>
    <string name="selected_df_recipients">Selected %d recipients</string>
    <string name="selected_one_recipient">Selected 1 recipient</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="send_this_message_to_sf">Send this message to %s?</string>
    <string name="register_privacy_policy">By registering, I have read and agree to TapTalk.io\'s Privacy Policy</string>
    <string name="error_register_privacy_policy">Please read and agree to our privacy policy before continuing.</string>

    <!--Verification-->
    <string name="tap_login_via_whatsapp">Login via WhatsApp</string>
    <string name="tap_login_via_otp">Login via OTP</string>
    <string name="tap_whatsapp_verification">WhatsApp Verification</string>
    <string name="tap_otp_verification">OTP Verification</string>
    <string name="tap_whatsapp_verification_description">To continue the verification process, click on the ‘Open WhatsApp’ button. If you wish to use WhatsApp from another device, click on the ‘QR Code’ button to scan it on your device.\n\nPlease send the generated message to the opened chat without making any changes.</string>
    <string name="tap_whatsapp_verification_qr_description">To continue the verification process, scan the QR code to open WhatsApp.\nPlease send the generated message to the opened chat without making any changes and confirm when you have sent the generated message by clicking the button below.</string>
    <string name="tap_otp_verification_whatsapp_description">Enter the 6 digit OTP we’ve sent by WhatsApp to your number below.</string>
    <string name="tap_otp_verification_sms_description">Enter the 6 digit OTP we’ve sent by SMS to your number below.</string>
    <string name="tap_open_whatsapp">Open WhatsApp</string>
    <string name="tap_change_phone_number">Change Phone Number</string>
    <string name="tap_i_have_sent_the_message">I have sent the message</string>
    <string name="tap_verification_loading_description">We are checking your verification status.\nPlease wait, this may take a while.</string>
    <string name="tap_verification_success">Verification Success</string>
    <string name="tap_verification_success_description">Your number has been successfully verified</string>
    <string name="tap_continue_to_home">Continue to Home</string>
    <string name="tap_format_redirect_seconds">You will be redirected in %d seconds…</string>
    <string name="tap_redirect_click">If not redirected, click here</string>
    <string name="tap_continue_to_register">Continue to Register</string>
    <string name="tap_verification_error">There’s something wrong</string>
    <string name="tap_verification_error_description">Your number has not been verified.</string>
    <string name="tap_retry_verification">Retry Verification</string>
    <string name="tap_d_format_error_otp_wait">Please wait %d seconds before requesting OTP</string>
    <string name="tap_d_format_error_verification_wait">Please wait %d seconds before requesting verification</string>
    <string name="tap_register_description">It seems that this is your first time using TapTalk.io, please fill out the information needed below.</string>
    <string name="tap_error_register_full_name_max">Maximum %d characters</string>
    <string name="tap_error_register_username_start">Can\'t start with numeric, underscore (_) and period (.)</string>
    <string name="tap_error_register_username_length">Must be between %d-%d characters</string>
    <string name="tap_error_register_username_symbol">Only a–z, 0–9, underscore (_) and period (.) allowed</string>
    <string name="tap_error_register_username_consecutive_symbols">Can\'t contain consecutive underscores, consecutive dot, underscore followed with dot, and otherwise</string>
    <string name="tap_error_register_username_end">Can\’t end with underscore (_) and period (.)</string>
    <string name="tap_error_register_username_taken">Username has been taken</string>
    <string name="tap_error_register_privacy_policy">You need to accept privacy policy first to continue</string>
</resources>
