<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_verification_status_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tap_bg_login_rounded_top_16"
    android:elevation="4dp"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:translationY="960dp"
    android:visibility="gone"
    tools:translationY="0dp"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="32dp"
        android:paddingEnd="24dp">

        <FrameLayout
            android:id="@+id/fl_verification_status_image_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_verification_status_loading"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/tap_ic_loading_orange_gradient"
                android:visibility="gone"
                tools:visibility="visible" />

            <View
                android:id="@+id/v_verification_status_background"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:alpha="0.2"
                android:visibility="gone"
                tools:background="@drawable/tap_bg_verification_success"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/iv_verification_status_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/tap_ic_rounded_check_green"
                android:tint="@color/tapColorWhiteIcon"
                android:visibility="gone"
                tools:background="@drawable/tap_bg_verification_success"
                tools:ignore="UseAppTint"
                tools:visibility="visible" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_verification_status_title"
            style="@style/tapLoginTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_verification_status_image_container"
            tools:text="@string/tap_loading_dots" />

        <TextView
            android:id="@+id/tv_verification_status_description"
            style="@style/tapLoginDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_verification_status_title"
            tools:text="@string/tap_verification_loading_description" />

        <TextView
            android:id="@+id/tv_verification_status_redirect_timer"
            style="@style/tapLoginDescriptionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_verification_status_description"
            tools:text="@string/tap_format_redirect_seconds" />

        <LinearLayout
            android:id="@+id/ll_button_continue_to_home"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_verification_status_redirect_timer"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_button_continue_to_home"
                style="@style/tapPrimaryLabelButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tap_continue_to_home" />

            <ImageView
                android:id="@+id/iv_button_continue_to_home_icon"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:rotation="180"
                android:src="@drawable/tap_ic_arrow_left_orange" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_retry_verification"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/ll_button_continue_to_home"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_button_retry_verification_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:src="@drawable/tap_ic_retry_orange" />

            <TextView
                android:id="@+id/tv_button_retry_verification"
                style="@style/tapPrimaryLabelButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tap_retry_verification" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
